Update 01 - API Access.ipynb

--- a/01 - API Access.ipynb
+++ b/01 - API Access.ipynb
@@ -28,9 +28,16 @@
    "outputs": [],
    "source": [
     "from psaw import PushshiftAPI\n",
+    "# https://pushshift.io/\n",
+    "# -> has a list of API endpoints, \n",
+    "# which allow you to get data or search the data for comment, \n",
+    "# submissions, and subreddit\n",
+    "# -> documentation: https://github.com/pushshift/api\n",
     "import pandas as pd\n",
     "\n",
-    "api = PushshiftAPI()"
+    "api = PushshiftAPI()\n",
+    "# -> if you type \"api.\", then press TAB after this point, \n",
+    "# then you will see the functions."
    ]
   },
   {
@@ -43,12 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "74217052",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:252: UserWarning: Not all PushShift shards are active. Query results may be incomplete\n",
+      "  warnings.warn(shards_down_message)\n"
+     ]
+    }
+   ],
    "source": [
-    "posts = api.search_submissions(limit=50, filter=['full_link','author', 'title', 'subreddit', 'created_utc'])\n",
+    "posts = api.search_submissions(limit=5, filter=['full_link','author', 'title', 'subreddit', 'created_utc'])\n",
     "results = list(posts)"
    ]
   },
@@ -62,17 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d284f8ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "submission(author='AHornyGuy5', created_utc=1649062305, full_link='https://www.reddit.com/r/DirtySnapchat/comments/tvx9kv/24_m4f_any_girls_looking_for_some_dick_pics/', subreddit='DirtySnapchat', title='24 [M4F] Any girls looking for some dick pics?', created=1649033505.0, d_={'author': 'AHornyGuy5', 'created_utc': 1649062305, 'full_link': 'https://www.reddit.com/r/DirtySnapchat/comments/tvx9kv/24_m4f_any_girls_looking_for_some_dick_pics/', 'subreddit': 'DirtySnapchat', 'title': '24 [M4F] Any girls looking for some dick pics?', 'created': 1649033505.0})"
+       "submission(author='mystiqueque', created_utc=1649497750, full_link='https://www.reddit.com/r/MacMiller/comments/tzpxhc/sza_showing_some_love_to_our_boy/', subreddit='MacMiller', title='sza showing some love to our boy 🤍', created=1649468950.0, d_={'author': 'mystiqueque', 'created_utc': 1649497750, 'full_link': 'https://www.reddit.com/r/MacMiller/comments/tzpxhc/sza_showing_some_love_to_our_boy/', 'subreddit': 'MacMiller', 'title': 'sza showing some love to our boy 🤍', 'created': 1649468950.0})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "1300bc99-7409-4b8b-bd95-b345bf0824d0",
    "metadata": {},
    "outputs": [
@@ -102,7 +118,7 @@
        "50"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
