to do: challenge 01

--- a/01 - API Access.ipynb
+++ b/01 - API Access.ipynb
@@ -33,11 +33,22 @@
     "# which allow you to get data or search the data for comment, \n",
     "# submissions, and subreddit\n",
     "# -> documentation: https://github.com/pushshift/api\n",
+    "\n",
     "import pandas as pd\n",
+    "# -> pandas is a library that allows you to read CSV files\n",
+    "# and other excel files.\n",
+    "# -> a way to create tables in Python\n",
+    "\n",
     "\n",
     "api = PushshiftAPI()\n",
     "# -> if you type \"api.\", then press TAB after this point, \n",
-    "# then you will see the functions."
+    "# then you will see the functions.\n",
+    "\n",
+    "# NOTE: When you're calling API connections, it requires Internet.\n",
+    "# When you get disconnected, it's going to stop.\n",
+    "\n",
+    "# -> Using API is really about understanding the structure that you're\n",
+    "# getting and reading their documentation. "
    ]
   },
   {
@@ -65,7 +76,10 @@
    ],
    "source": [
     "posts = api.search_submissions(limit=5, filter=['full_link','author', 'title', 'subreddit', 'created_utc'])\n",
-    "results = list(posts)"
+    "results = list(posts)\n",
+    "\n",
+    "# -> setting a limit avoid the program crashing or stopping as retrieving\n",
+    "# large amount of data might cause it to crash/stop"
    ]
   },
   {
@@ -85,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "submission(author='mystiqueque', created_utc=1649497750, full_link='https://www.reddit.com/r/MacMiller/comments/tzpxhc/sza_showing_some_love_to_our_boy/', subreddit='MacMiller', title='sza showing some love to our boy 🤍', created=1649468950.0, d_={'author': 'mystiqueque', 'created_utc': 1649497750, 'full_link': 'https://www.reddit.com/r/MacMiller/comments/tzpxhc/sza_showing_some_love_to_our_boy/', 'subreddit': 'MacMiller', 'title': 'sza showing some love to our boy 🤍', 'created': 1649468950.0})"
+       "submission(author='steven_exit', created_utc=1649505353, full_link='https://www.reddit.com/r/wichsbros3/comments/tzrom7/telegram_gruppe_mit_corinna_kopf_elena_kamperi/', subreddit='wichsbros3', title='Telegram Gruppe mit Corinna kopf Elena kamperi etc. täglich 100 onlyfans ,ohne invites, Tausche gegen deutsche Teens bei Interesse dm', created=1649476553.0, d_={'author': 'steven_exit', 'created_utc': 1649505353, 'full_link': 'https://www.reddit.com/r/wichsbros3/comments/tzrom7/telegram_gruppe_mit_corinna_kopf_elena_kamperi/', 'subreddit': 'wichsbros3', 'title': 'Telegram Gruppe mit Corinna kopf Elena kamperi etc. täglich 100 onlyfans ,ohne invites, Tausche gegen deutsche Teens bei Interesse dm', 'created': 1649476553.0})"
       ]
      },
      "execution_count": 3,
@@ -99,6 +113,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "23dc5f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "psaw.PushshiftAPI.submission"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(results[0])\n",
+    "# -> As we can see, the type of the data is Pushshift object, which is why\n",
+    "# we cannot directly play with it.\n",
+    "# -> the part that has d_={} is the JSON object. It repeats the part of the\n",
+    "# submission but in JSON form."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "51833fcc-7a4f-4eaf-aeac-3c0f942d64fa",
    "metadata": {},
@@ -108,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1300bc99-7409-4b8b-bd95-b345bf0824d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50"
+       "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,13 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "27368d90",
    "metadata": {},
    "outputs": [],
    "source": [
     "posts = api.search_submissions(limit=5, subreddit=\"philippines\", filter=['full_link','author', 'title', 'subreddit', 'created_utc', 'selftext'])\n",
-    "posts_df = pd.DataFrame([thing.d_ for thing in posts])"
+    "posts_df = pd.DataFrame([thing.d_ for thing in posts])\n",
+    "# NOTE: to easily put the data into a DataFrame."
    ]
   },
   {
@@ -157,9 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "12a06c53",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -194,65 +236,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ringingb1oom</td>\n",
-       "      <td>1649062317</td>\n",
+       "      <td>ziesPrime95</td>\n",
+       "      <td>1649505997</td>\n",
        "      <td>https://www.reddit.com/r/Philippines/comments/...</td>\n",
-       "      <td>I'm currently applying online for my SSS. Nire...</td>\n",
+       "      <td></td>\n",
        "      <td>Philippines</td>\n",
-       "      <td>Question about SSS</td>\n",
-       "      <td>1.649034e+09</td>\n",
+       "      <td>Sobrang kutya sa teleprompter pero ano to? 🤡</td>\n",
+       "      <td>1.649477e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>justtobiwithyou</td>\n",
-       "      <td>1649062267</td>\n",
+       "      <td>venom029</td>\n",
+       "      <td>1649505893</td>\n",
        "      <td>https://www.reddit.com/r/Philippines/comments/...</td>\n",
        "      <td></td>\n",
        "      <td>Philippines</td>\n",
-       "      <td>My friend sent me this Twitter video. \"Botox n...</td>\n",
-       "      <td>1.649033e+09</td>\n",
+       "      <td>BBM Solid Kakampinks ✌️❤️💚🌷</td>\n",
+       "      <td>1.649477e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>dump_account99</td>\n",
-       "      <td>1649062206</td>\n",
+       "      <td>Whenthingsgotwrong</td>\n",
+       "      <td>1649505813</td>\n",
        "      <td>https://www.reddit.com/r/Philippines/comments/...</td>\n",
-       "      <td>Hey guys,\\n\\nMy boyfriend and I are traveling ...</td>\n",
+       "      <td>Pinoys of reddit what is the worst punishment ...</td>\n",
        "      <td>Philippines</td>\n",
-       "      <td>Traveling to the Philippines</td>\n",
-       "      <td>1.649033e+09</td>\n",
+       "      <td>worst punishment</td>\n",
+       "      <td>1.649477e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>JexGaming</td>\n",
-       "      <td>1649062062</td>\n",
+       "      <td>joshuuuu214</td>\n",
+       "      <td>1649505807</td>\n",
        "      <td>https://www.reddit.com/r/Philippines/comments/...</td>\n",
        "      <td></td>\n",
        "      <td>Philippines</td>\n",
-       "      <td>Hahaha I’m trying to add a smiley on r/place t...</td>\n",
-       "      <td>1.649033e+09</td>\n",
+       "      <td>A Change of Heart</td>\n",
+       "      <td>1.649477e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>tuto170</td>\n",
-       "      <td>1649061774</td>\n",
+       "      <td>Bombooclat</td>\n",
+       "      <td>1649505789</td>\n",
        "      <td>https://www.reddit.com/r/Philippines/comments/...</td>\n",
-       "      <td></td>\n",
+       "      <td>Hi! Just a short preface na hindi na ako masya...</td>\n",
        "      <td>Philippines</td>\n",
-       "      <td>Is it true that majority of locals think that ...</td>\n",
-       "      <td>1.649033e+09</td>\n",
+       "      <td>How does Leni's legal team work?</td>\n",
+       "      <td>1.649477e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            author  created_utc  \\\n",
-       "0     ringingb1oom   1649062317   \n",
-       "1  justtobiwithyou   1649062267   \n",
-       "2   dump_account99   1649062206   \n",
-       "3        JexGaming   1649062062   \n",
-       "4          tuto170   1649061774   \n",
+       "               author  created_utc  \\\n",
+       "0         ziesPrime95   1649505997   \n",
+       "1            venom029   1649505893   \n",
+       "2  Whenthingsgotwrong   1649505813   \n",
+       "3         joshuuuu214   1649505807   \n",
+       "4          Bombooclat   1649505789   \n",
        "\n",
        "                                           full_link  \\\n",
        "0  https://www.reddit.com/r/Philippines/comments/...   \n",
@@ -262,28 +304,37 @@
        "4  https://www.reddit.com/r/Philippines/comments/...   \n",
        "\n",
        "                                            selftext    subreddit  \\\n",
-       "0  I'm currently applying online for my SSS. Nire...  Philippines   \n",
+       "0                                                     Philippines   \n",
        "1                                                     Philippines   \n",
-       "2  Hey guys,\\n\\nMy boyfriend and I are traveling ...  Philippines   \n",
+       "2  Pinoys of reddit what is the worst punishment ...  Philippines   \n",
        "3                                                     Philippines   \n",
-       "4                                                     Philippines   \n",
+       "4  Hi! Just a short preface na hindi na ako masya...  Philippines   \n",
        "\n",
-       "                                               title       created  \n",
-       "0                                 Question about SSS  1.649034e+09  \n",
-       "1  My friend sent me this Twitter video. \"Botox n...  1.649033e+09  \n",
-       "2                       Traveling to the Philippines  1.649033e+09  \n",
-       "3  Hahaha I’m trying to add a smiley on r/place t...  1.649033e+09  \n",
-       "4  Is it true that majority of locals think that ...  1.649033e+09  "
+       "                                          title       created  \n",
+       "0  Sobrang kutya sa teleprompter pero ano to? 🤡  1.649477e+09  \n",
+       "1                   BBM Solid Kakampinks ✌️❤️💚🌷  1.649477e+09  \n",
+       "2                              worst punishment  1.649477e+09  \n",
+       "3                             A Change of Heart  1.649477e+09  \n",
+       "4              How does Leni's legal team work?  1.649477e+09  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "posts_df"
+    "posts_df\n",
+    "\n",
+    "# -> created uses the epoch time, which is why it's an internet number\n",
+    "# for the date\n",
+    "\n",
+    "# TWO WAYS TO ACCESS A SPECIFIC COLUMN:\n",
+    "# 1. posts_df.full_link\n",
+    "# 2. posts_df['full_link'] -> how we usually access links/dictionaries\n",
+    "\n",
+    "# for a specific column of a specific row -> posts_df['full_link'][0]"
    ]
   },
   {
@@ -343,12 +394,17 @@
     "import datetime as dt\n",
     "\n",
     "sub=\"philippines\"\n",
-    "start=\"2021-03-11\"\n",
+    "start=\"2021-04-04\"\n",
     "\n",
     "start_date=pd.to_datetime(start)\n",
+    "# -> You can use pandas to convert the string into a DateTime object.\n",
+    "# Because a DateTime object can be converted to an Epoch integer\n",
     "\n",
     "start_epoch=int(start_date.timestamp())\n",
+    "# -> Converting the DateTime object into an Epoch float, before converting\n",
+    "# it into an Integer as the reddit API only accepts an Integer\n",
     "\n",
+    "# -> We are going to get the posts before April 4, 2022\n",
     "posts = api.search_submissions(limit=10, \n",
     "                               subreddit=sub, \n",
     "                               before=start_epoch,\n",
@@ -546,8 +602,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ace6015d-e294-4cc0-a782-a14a70509146",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dates' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-37c869a7ad3b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mposts_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mdate\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdates\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     posts = api.search_submissions(limit=10, \n\u001b[0;32m     15\u001b[0m                                \u001b[0msubreddit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msub\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dates' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# getting everything for the entire March\n",
+    "start = '2022-03-01'\n",
+    "end = '2022-03-31'\n",
+    "\n",
+    "start_date = pd.to_datetime(start)\n",
+    "end_date = pd.to_datetime(end)\n",
+    "\n",
+    "start_epoch = int(start_date.timestamp())\n",
+    "end_epoch = int(end_date.timestamp())\n",
+    "\n",
+    "posts_df = pd.DataFrame()\n",
+    "\n",
+    "# to do\n",
+    "for date in dates:\n",
+    "    posts = api.search_submissions(limit=20, \n",
+    "                               subreddit=sub, \n",
+    "                               before=,\n",
+    "                               after=end_epoch,\n",
+    "                               filter=['full_link','author', 'title', 'subreddit', 'created_utc'])\n",
+    "    posts_df.append([thing.d_ for thing in posts])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a1ec6d",
    "metadata": {},
    "outputs": [],
    "source": []
