--- a/02 - Web Scraping With Edits.ipynb
+++ b/02 - Web Scraping With Edits.ipynb
@@ -27,7 +27,14 @@
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "URL=\"https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number\""
+    "URL=\"https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number\"\n",
+    "\n",
+    "\n",
+    "# WHY ARE WE MAKING A REQUEST?\n",
+    "# -> Everything you do in a browser is calling the Internet and requesting\n",
+    "# some form of data. Even your HTML page is some form of data form.\n",
+    "# It's also a document, which means when you refresh this page, it has some\n",
+    "# form of request URL. "
    ]
   },
   {
