Update 02 - Web Scraping With Edits.ipynb

--- a/02 - Web Scraping With Edits.ipynb
+++ b/02 - Web Scraping With Edits.ipynb
@@ -31666,7 +31666,12 @@
     "        # Saving as a tuple\n",
     "        extracted_poke_info.append((kdex, ndex, poke_name, type1, type2, categ))\n",
     "        \n",
-    "    \n",
+    "# WHY ARE WE USING TUPLES?\n",
+    "# -> You could use a nested list. But whenever you have a fixed structure \n",
+    "# (you know that it's always going ot be that way and you don't want it to\n",
+    "# change/updated in anyway because you know that's your data), it's safer to\n",
+    "# use a tuple because a tuple is immutable.\n",
+    "\n",
     "    else:\n",
     "        pass\n",
     "#         print(pokemon_info_values)"
@@ -31674,8 +31679,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "b35e4591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "184\n",
+      "184\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -> We can check if we were able to correctly extract the correct number of\n",
+    "# rows by comparing the length of the contents and the length of our \n",
+    "# tuple. \n",
+    "\n",
+    "# -> In this case, since we removed the first row and only retrieved the\n",
+    "# even indices, we have to subtract 1 and divide it by 2.\n",
+    "\n",
+    "print ((len (info_row) - 1) // 2)\n",
+    "print (len (extracted_poke_info))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
-   "id": "d72d2d86",
+   "id": "b4d74dc8",
    "metadata": {},
    "outputs": [
     {
