Update 03 - Pandas and Data Wrangling.ipynb

--- a/03 - Pandas and Data Wrangling.ipynb
+++ b/03 - Pandas and Data Wrangling.ipynb
@@ -2892,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2918,87 +2918,99 @@
        "      <th></th>\n",
        "      <th>school_id</th>\n",
        "      <th>2012</th>\n",
+       "      <th>2015</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>100001</td>\n",
-       "      <td>72</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>72.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>100002</td>\n",
-       "      <td>365</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>407.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>100003</td>\n",
-       "      <td>138</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>152.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>100004</td>\n",
-       "      <td>89</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>107.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>100005</td>\n",
-       "      <td>73</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>67.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38654</th>\n",
-       "      <td>260501</td>\n",
-       "      <td>54</td>\n",
+       "      <th>38680</th>\n",
+       "      <td>133129</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38655</th>\n",
-       "      <td>261001</td>\n",
-       "      <td>697</td>\n",
+       "      <th>38681</th>\n",
+       "      <td>133150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>113.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38656</th>\n",
-       "      <td>261501</td>\n",
-       "      <td>25</td>\n",
+       "      <th>38682</th>\n",
+       "      <td>133191</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38657</th>\n",
-       "      <td>261502</td>\n",
-       "      <td>12</td>\n",
+       "      <th>38683</th>\n",
+       "      <td>133198</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38658</th>\n",
-       "      <td>261503</td>\n",
-       "      <td>50</td>\n",
+       "      <th>38684</th>\n",
+       "      <td>133201</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>38659 rows × 2 columns</p>\n",
+       "<p>38685 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       school_id  2012\n",
-       "0         100001    72\n",
-       "1         100002   365\n",
-       "2         100003   138\n",
-       "3         100004    89\n",
-       "4         100005    73\n",
-       "...          ...   ...\n",
-       "38654     260501    54\n",
-       "38655     261001   697\n",
-       "38656     261501    25\n",
-       "38657     261502    12\n",
-       "38658     261503    50\n",
+       "       school_id   2012   2015\n",
+       "0         100001   72.0   72.0\n",
+       "1         100002  365.0  407.0\n",
+       "2         100003  138.0  152.0\n",
+       "3         100004   89.0  107.0\n",
+       "4         100005   73.0   67.0\n",
+       "...          ...    ...    ...\n",
+       "38680     133129    NaN    0.0\n",
+       "38681     133150    NaN  113.0\n",
+       "38682     133191    NaN   28.0\n",
+       "38683     133198    NaN   23.0\n",
+       "38684     133201    NaN   35.0\n",
        "\n",
-       "[38659 rows x 2 columns]"
+       "[38685 rows x 3 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3006,16 +3018,39 @@
    "source": [
     "## Merge the two dataframes using different \"how\" parameters\n",
     "# how : {'left', 'right', 'outer', 'inner'}, default 'inner'\n",
-    "stats2012.merge(stats2015, on='school_id', how='inner')\n",
-    "stats2012"
+    "stats_combined = stats2012.merge(stats2015, on='school_id', how='outer')\n",
+    "stats_combined\n",
+    "# -> INNER -> there are less rows because there are schools not in 2012 but in 2015, and\n",
+    "# there are schools not in 2015 but in 2012"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_id       0\n",
+       "2012           26\n",
+       "2015         5661\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_combined.isna().sum()\n",
+    "\n",
+    "# In 2012, there are 26 that has missing values. These schools that are in \n",
+    "# 2015, but are missing in 2012, there are schools that are new schools\n",
+    "# in the area. But, those that are not in 2015, but are in 2012, there are\n",
+    "# other schools that are not present in 2015 that are not from CAR nor NCR."
+   ]
   },
   {
    "cell_type": "code",
