--- a/03 - Pandas and Data Wrangling.ipynb
+++ b/03 - Pandas and Data Wrangling.ipynb
@@ -2632,13 +2632,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "stats2012 = deped2012.groupby('school_id', as_index=False).sum()\n",
     "stats2015 = deped2015.groupby('school_id', as_index=False).sum()\n",
     "\n",
+    "stats2012_w = stats2012.copy()\n",
+    "stats2015_w = stats2015.copy()\n",
     "# -> school ID as a reference\n",
     "# -> statistics of the school ID regardless of their region, etc. Just by \n",
     "# school ID as it is unique"
@@ -2646,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2715,7 @@
        "4     100005          73"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2724,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2735,7 @@
        "(38659, 2)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2744,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2813,7 @@
        "4     100005          67"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2822,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2833,7 @@
        "(33024, 2)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2842,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2881,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2892,7 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +3012,7 @@
        "[38685 rows x 3 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3021,12 +3023,13 @@
     "stats_combined = stats2012.merge(stats2015, on='school_id', how='outer')\n",
     "stats_combined\n",
     "# -> INNER -> there are less rows because there are schools not in 2012 but in 2015, and\n",
-    "# there are schools not in 2015 but in 2012"
+    "# there are schools not in 2015 but in 2012\n",
+    "# -> You don't know that these years represent the enrollment counts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3038,7 +3041,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3054,17 +3057,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -> Another solution is adding the year column.\n",
+    "\n",
+    "stats2012_w['year'] = 2012\n",
+    "stats2015_w['year'] = 2015\n",
+    "\n",
+    "# -> Would result in a wide table\n",
+    "\n",
+    "wide_table = pd.concat([stats2012_w, stats2015_w])\n",
+    "# The first rows are for the 2012, and the last rows are for the 2015."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_id</th>\n",
+       "      <th>enrollment</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100001</td>\n",
+       "      <td>72</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100001</td>\n",
+       "      <td>72</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>365</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>407</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100003</td>\n",
+       "      <td>138</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38654</th>\n",
+       "      <td>260501</td>\n",
+       "      <td>54</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38655</th>\n",
+       "      <td>261001</td>\n",
+       "      <td>697</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38656</th>\n",
+       "      <td>261501</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38657</th>\n",
+       "      <td>261502</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38658</th>\n",
+       "      <td>261503</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71683 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       school_id  enrollment  year\n",
+       "0         100001          72  2012\n",
+       "0         100001          72  2015\n",
+       "1         100002         365  2012\n",
+       "1         100002         407  2015\n",
+       "2         100003         138  2012\n",
+       "...          ...         ...   ...\n",
+       "38654     260501          54  2012\n",
+       "38655     261001         697  2012\n",
+       "38656     261501          25  2012\n",
+       "38657     261502          12  2012\n",
+       "38658     261503          50  2012\n",
+       "\n",
+       "[71683 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wide_table.sort_values(by=['school_id', 'year'])\n",
+    "\n",
+    "# -> adding inplace=True would not return the table\n",
+    "# -> you might want to reset the index"
+   ]
   },
   {
    "cell_type": "code",
